--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ button {
   width: 100%;
   height: auto;
   min-height: 650px;
-  background-image: url('images/website.jpg');
+  background-image: url('website.jpg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center center;
