--- a/style.css
+++ b/style.css
@@ -512,6 +512,15 @@ button {
         line-height: 24px;
     }
 
+.banner-wrapper {
+  background-size: cover;
+  
+}
+
+
+
+    
+
  /*  about */
     .about_wrapper ul.nav-pills{
         width: 100%;
